--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.3.1
+  google_sign_in_all_platforms: ^0.0.4
+  http: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
